	Possible fix for permission persistency bug.
	Logic error where town mayor and assistents where charged taxes.
v0.29:
	New default aliases for commands seeing as how Essentials keeps stealing them all.
		The commands /r, /t, and /n are still there, however there are second to Essentials (IE: they will work when it's not installed).
		/resident = /player,/p,/res,/r
		/town = /t
		/nation = /nat,/n
		Towny, Plot and Townyadmin (/ta) remain the same.
	Changed command config keys from the suffix _COMMANDS to the prefix COMMANDS_ so as to group them all.
v0.30:
	Changed towny.spawntp -> towny.publicspawntp, this permission has to do with teleporting to other towns.
	New permission towny.spawntp will be relative to your own town.
	Town has new property: /town set public [on/off]. This will toggle if you allow non-residents to use your warp, and also hides you Homeblock location from the town status.
v0.31:
	Players are properly taxed when using /town spawn
	Added option to ignore all interactions with towny in certain worlds.
		/tw set usingtowny [on/off]
v0.32:
	Added new permission Item Use. Used to prevent using items (like buckets and lighters).
v0.33:
	Added points per kill during war.
	Introducing . . . Pet Zombie mode. An amusing bug from the last release, hoping to prevent damage within towns from other players (PvP) has also prevented PvE. So in the config, there is now an option for your very own pet zombie mode (no_pve_within_non_pvp_towns)
v0.34 (Craftbukkit 424+ & Minecraft 1.3):
	Added support for GroupManager directly.
v0.35:
	Fixed entity damage mess caused by the PvE option.
	Updated for iConomy 3.0
v0.36:
	Added new town/nation permissions along with config msgs for those without them.	
	Town set public was actually editing the pvp setting.
	Changed towny version command to /towny v, as bukkit highjacks the "version" token.
v0.37:

TODO:	
	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc