@@ -1,6 +1,6 @@
 name: Towny
 main: ca.xshade.bukkit.towny.Towny
-version: 2.0.36
+version: 2.0.37
 author: Shade
 website: http://towny.xshade.ca
 description: >
